First version of FilterBox that can actually make CVChains all the way to Bento