@@ -12,6 +12,11 @@
 
 	<name>${project.artifactId} - OSGi</name>
 
+ <properties>
+	 <!-- this will be a System.getProperty("behavior.master.type")  -->
+	 <!-- headless or emptystring -->
+        <behavior.master.type>headless</behavior.master.type>        
+ </properties>
 
 	<dependencies>
 		<dependency>
@@ -143,4 +148,87 @@
 			</plugin>			
 		</plugins>
 	</build>
+<profiles>
+    <profile>
+     <id>run-on-felix</id>
+     <dependencies>
+      <dependency>
+       <groupId>org.apache.felix</groupId>
+       <artifactId>org.apache.felix.main</artifactId>
+       <version>4.2.1</version>
+       <scope>provided</scope>
+      </dependency>
+      <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
+       <version>1.7.5</version>
+      </dependency>
+      <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-log4j12</artifactId>
+       <version>1.7.5</version>
+      </dependency>
+    
+    <!-- org.apache.felix:org.apache.felix.gogo.shell:0.6.1 useless from Maven since stdin is swallowed -->
+     </dependencies>
+    
+     <build>
+      <plugins>
+       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.6</version>
+        <configuration>
+         <target>
+      <!-- HRK custom :  Note the log4j.debug flag -->
+          <property name="vm.args" value="-Dlog4j.debug -Xmx16g -XX:MaxPermSize=3g" />
+          <property name="vm.localargs" value="" />
+          <pathconvert property="plugins.jars" pathsep="${path.separator}">
+           <path refid="maven.runtime.classpath" />
+           <map from="${project.build.directory}${file.separator}classes"
+            to="" />
+          </pathconvert>
+          <makeurl property="urls" separator=" ">
+           <path path="${plugins.jars}" />
+           <path
+            location="${project.build.directory}/${project.build.finalName}.jar" />
+          </makeurl>
+          <propertyfile file="${project.build.directory}/run.properties">
+           <entry key="felix.auto.start" value="${urls}" />
+           <entry key="felix.auto.deploy.action" value="uninstall,install,update,start" />
+           <entry key="org.osgi.framework.storage"
+            value="${project.build.directory}${file.separator}felix-cache" />
+           <entry key="org.osgi.framework.bootdelegation" value="*" />
+     <!-- HRK Customization:   Allow sun.misc package to be used by LWJGL under OSGi -->
+     <!-- org.w3c.dom.* are missing from default.properties in felix 4.2.1, they are present in 3.0.7 -->
+           <entry key="org.osgi.framework.system.packages.extra"
+            value="sun.misc,
+               org.w3c.dom.css,
+               org.w3c.dom.html,
+               org.w3c.dom.stylesheets,
+               org.w3c.dom.traversal,
+               org.w3c.dom.ranges,
+               org.w3c.dom.views,
+               org.w3c.dom.xpath" />
+          </propertyfile>
+          <makeurl property="run.properties.url"
+           file="${project.build.directory}/run.properties" />
+          <java fork="true"
+           jar="${maven.dependency.org.apache.felix.org.apache.felix.main.jar.path}">
+           <sysproperty key="felix.config.properties" value="${run.properties.url}" />
+           <sysproperty key="com.hrkind.robot.connections" value="${com.hrkind.robot.connections}" />
+           <sysproperty key="com.hrkind.demo.behavior.master.source" value="${com.hrkind.demo.behavior.master.source}" />
+           <sysproperty key="puma.boot.config.local" value="${puma.boot.config.local}" />
+           <sysproperty key="behavior.master.type" value="${behavior.master.type}" />
+            <!-- <sysproperty key="RKExtraVoices" value="klaus:saul" />-->
+           <jvmarg line="${vm.args} ${vm.localargs}" />
+          </java>
+         </target>
+        </configuration>
+       </plugin>
+    
+      </plugins>
+     </build>
+    </profile>
+ </profiles>
 </project>
